@@ -304,18 +304,18 @@ sapwood_pixmap_get_pixmap (SapwoodPixmap *self, gint x, gint y,
   *pixmask = self->pixmask[y][x];
 }
 
-void
-sapwood_pixmap_render_rects (SapwoodPixmap *self,
-			    GdkDrawable  *draw,
-			    gint          draw_x,
-			    gint          draw_y,
-			    GdkBitmap    *mask,
-			    gint          mask_x,
-			    gint          mask_y,
-			    gboolean      mask_required,
-			    GdkRectangle *clip_rect,
-			    gint          n_rect,
-			    SapwoodRect   *rect)
+static void
+sapwood_pixmap_render_rects_internal (SapwoodPixmap *self,
+                                      GdkDrawable   *draw,
+                                      gint           draw_x,
+                                      gint           draw_y,
+                                      GdkBitmap     *mask,
+                                      gint           mask_x,
+                                      gint           mask_y,
+                                      gboolean       mask_required,
+                                      GdkRectangle  *clip_rect,
+                                      gint           n_rect,
+                                      SapwoodRect   *rect)
 {
   static GdkGC *mask_gc = NULL;
   static GdkGC *draw_gc = NULL;
@@ -395,4 +395,98 @@ sapwood_pixmap_render_rects (SapwoodPixmap *self,
 	  gdk_draw_rectangle (draw, draw_gc, TRUE, area.x, area.y, area.width, area.height);
 	}
     }
+}
+
+void
+sapwood_pixmap_render_rects (SapwoodPixmap *self,
+                             GdkDrawable   *draw,
+                             gint           draw_x,
+                             gint           draw_y,
+                             gint           width,
+                             gint           height,
+                             GdkBitmap     *mask,
+                             gint           mask_x,
+                             gint           mask_y,
+                             gboolean       mask_required,
+                             GdkRectangle  *clip_rect,
+                             gint           n_rect,
+                             SapwoodRect   *rect)
+{
+  gint       tmp_width;
+  gint       tmp_height;
+  GdkPixmap *tmp;
+  gboolean   need_tmp_mask = FALSE;
+  GdkPixmap *tmp_mask = NULL;
+  cairo_t   *mask_cr = NULL;
+  cairo_t   *tmp_cr;
+  cairo_t   *cr;
+  gint       n;
+  
+  /* Don't even try to scale down shape masks (should never be useful, and
+   * implementing would add some complexity.) Areas larger than the pixmap
+   * can be tiled fine.
+   */
+  if (mask_required || (width >= self->width && height >= self->height))
+    {
+      sapwood_pixmap_render_rects_internal (self, draw, draw_x, draw_y, mask, mask_x, mask_y, mask_required, clip_rect, n_rect, rect);
+      return;
+    }
+
+  /* offset the drawing on temporary pixmap */
+  for (n = 0; n < n_rect; n++)
+    {
+      SapwoodRect *r = &rect[n];
+      r->dest.x -= draw_x;
+      r->dest.y -= draw_y;
+      if (r->pixmap && r->pixmask)
+	need_tmp_mask = TRUE;
+    }
+
+  /* prepare temporary pixmap and mask to draw in full size */
+  tmp_width = MAX(width, self->width);
+  tmp_height = MAX(height, self->height);
+
+  tmp = gdk_pixmap_new (draw, tmp_width, tmp_height, -1);
+
+  if (need_tmp_mask)
+    {
+      tmp_mask = gdk_pixmap_new (draw, tmp_width, tmp_height, 1);
+
+      mask_cr = gdk_cairo_create (tmp_mask);
+      cairo_set_source_rgb (mask_cr, 1., 1., 1.);
+      cairo_paint (mask_cr);
+    }
+
+  sapwood_pixmap_render_rects_internal (self, tmp, 0, 0, tmp_mask, 0, 0, mask_required, NULL, n_rect, rect);
+
+  tmp_cr = gdk_cairo_create (tmp);
+
+  /* finally, render downscaled at draw_x,draw_y */
+  cr = gdk_cairo_create (draw);
+  if (clip_rect)
+    {
+      gdk_cairo_rectangle (cr, clip_rect);
+      cairo_clip (cr);
+    }
+  cairo_rectangle (cr, draw_x, draw_y, width, height);
+  cairo_clip (cr);
+
+  cairo_translate (cr, draw_x, draw_y);
+  cairo_scale (cr, (double)width / (double)tmp_width,
+		   (double)height / (double)tmp_height);
+
+  cairo_set_source_surface (cr, cairo_get_target (tmp_cr), 0, 0);
+  if (mask_cr)
+    cairo_mask_surface (cr, cairo_get_target (mask_cr), 0, 0);
+  else
+    cairo_paint (cr);
+
+  /* clean up */
+  cairo_destroy (cr);
+  if (mask_cr)
+    cairo_destroy (mask_cr);
+  if (tmp_mask)
+    g_object_unref (tmp_mask);
+  cairo_destroy (tmp_cr);
+  g_object_unref (tmp);
 }
