@@ -64,6 +64,8 @@ void      sapwood_pixmap_render_rects (SapwoodPixmap *self,
 				      GdkDrawable  *draw,
 				      gint          draw_x,
 				      gint          draw_y,
+				      gint          width,
+				      gint          height,
 				      GdkBitmap    *mask,
 				      gint          mask_x,
 				      gint          mask_y,
